--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,7 +12,7 @@
         </style>
     </head>
 <div>
-    <h1><a href="/">Django Girls Blog</a></h1>
+    <h1><a href="/">Hardik Dhuri's Blog Page</a></h1>
 </div>
 
 {% for post in posts %}
