--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title> My Blog</title>
-        <style>
-            h1 {
-                text-align: center;
-            }
-            h2 {
-                text-align: center;
-            }
-        </style>
-    </head>
-<div>
-    <h1><a href="/">Hardik Dhuri's Blog Page</a></h1>
-</div>
+{% extends 'blog/base.html' %}
 
-{% for post in posts %}
-    <div>
-        <h2><a href="">{{ post.title }}</a></h2>
-        <p>{{ post.text|linebreaksbr }}</p>
-        <p>Published: {{ post.published_date }}</p>
-    </div>
-{% endfor %}
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h2><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
